--- a/views/index.html
+++ b/views/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>techNotes API</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TaskManagement API</title>
     <link rel="stylesheet" href="css/style.css" />
-</head>
+  </head>
 
-<body>
-    <h1>techNotes</h1>
-</body>
-
+  <body>
+    <h1>Task Management API</h1>
+  </body>
 </html>
